# iipsrv

./: .gitignore
.circleci/: config.yml
.github/workflows/: push.yml
docker/: Dockerfile  deploy.sh  start-iip.sh
src/: CVT.cc  CZIImage.cc  CZIImage.h  DeepZoom.cc  Environment.h  FIF.cc  IIIF.cc  IIPImage.cc  IIPImage.h  JTL.cc  Main.cc  Makefile.am  OpenSlideImage.cc  OpenSlideImage.h  QPTIFFImage.cc  QPTIFFImage.h  TIFFCompressor.cc  Task.cc  Task.h  Transforms.cc  URL.h  View.cc  View.h
